--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,7 +93,8 @@
     "listingCreateError": "Error creating the listing.",
     "genericSuccess": "Operation succesfull.",
     "genericError": "Operation failed.",
-    "emailInUse": "Email is already in-use."
+    "emailInUse": "Email is already in-use.",
+    "favoritesUpdate": "Updated favorites."
   },
   "listingDetails": {
     "title": "Listing Details",
