--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -48,7 +48,8 @@
   "topBar": {
     "addListing": "İlan Ekle",
     "myListings": "İlanlarım",
-    "logout": "Çıkış Yap"
+    "logout": "Çıkış Yap",
+    "data": "Veri Paneli"
   },
 
   "addListing": {
